tests/algorithms/x/Python/web_programming/fetch_jobs.out
Traceback (most recent call last):
  File "/workspace/mochi/tests/algorithms/x/Python/web_programming/fetch_jobs.py", line 93, in <module>
    main()
  File "/workspace/mochi/tests/algorithms/x/Python/web_programming/fetch_jobs.py", line 91, in main
    print("Job " + intToString(idx) + " is " + j.title + " at " + j.company)
                   ^^^^^^^^^^^^^^^^
  File "/workspace/mochi/tests/algorithms/x/Python/web_programming/fetch_jobs.py", line 71, in intToString
    digits = "0123456789"[d:d + 1] + digits
             ~~~~~~~~~~~~^^^^^^^^^
TypeError: slice indices must be integers or None or have an __index__ method